--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
 	],
 	"dependencies": {
 		"angular": "~1.3",
-		"jquery": "~2.1.4"
+		"jquery": "~2.1.4",
 		"jquery.ui": "~1.11"
 	},
 	"description": "Angular autocomplete directive",
